--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  golden_toolkit: ^0.15.0
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  integration_test:
+    sdk: flutter
+
+  golden_toolkit: ^0.15.0
 
   flutter_lints: ^3.0.0
 
